2008-07-09  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/youtube.py: Resolve the video URI of YouTube
	videos when loading search results, rather than when playing them
	to ensure URIs added to the playlist are correct. (Closes: #541916)

2008-06-27  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget.h: Kill bacon_video_widget_can_play
	and get errors directly from _get_mrls().

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_channels_file),
	(bacon_video_widget_get_dvd_mrls),
	(bacon_video_widget_get_dvb_mrls), (bacon_video_widget_get_mrls):
	* src/backend/bacon-video-widget-xine.c (xine_try_error),
	(bacon_video_widget_get_mrls):
	Better errors when a device isn't present, channels file is missing,
	or the device is busy

	* src/totem.c (totem_action_load_media): Changes for the above
	(Closes: #539319)

2008-06-27  Gabor Kelemen  <kelemeng@gnome.hu>

	* data/playlist.ui: Add accelerator to the Select text subtitle... text
	* src/plugins/youtube/youtube.ui: Mark Search Youtube button's tooltip for translation
	(Closes: #539004)

2008-06-26  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Even when $(prefix)/lib64 is present, check
	that the python directory is present, spotted by Mikael Lindberg
	<mikael.lindberg@gmail.com> (Closes: #540289)

2008-06-20  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c (setup_config),
	(xine_event_message), (bacon_video_widget_get_mrls):
	Ask xine-lib to not remember the last DVB channel used,
	so we don't have to skip one when copying the MRLs,
	prepare for better error message when getting the list
	of MRLs for DVB

	* src/totem-playlist.c (totem_playlist_mrl_to_title):
	Another label work-around for DVB MRLs, just like the DVD one

	* src/totem.c (totem_action_set_mrl_with_warning),
	(totem_action_open_files_list), (totem_action_remote),
	(on_eos_event): When calling play_pause_set_label() make sure the