@@ -1,3 +1,9 @@
+2008-07-14  Bastien Nocera  <hadess@hadess.net>
+
+	* src/backend/Makefile.am: Patch from Götz Waschk
+	<waschk@mandriva.org> to fix the build with nvtv enabled
+	(Closes: #541546)
+
 2008-07-09  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* src/plugins/youtube/youtube.py: Resolve the video URI of YouTube
